# lana-bank

./: .envrc  .gitignore  AUTHN.md  AUTHZ.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  clippy.toml  deny.toml  docker-compose.data.yml  docker-compose.docker.yml  docker-compose.yml  flake.nix  meltano.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
core/access/: Cargo.toml
core/access/src/: bootstrap.rs  event.rs  lib.rs  primitives.rs  publisher.rs
core/accounting/: Cargo.toml
core/accounting/src/: lib.rs  primitives.rs
core/accounting/tests/: ledger_account.rs  ledger_transaction.rs  trial_balance.rs
core/applicant/: Cargo.toml
core/applicant/src/: error.rs  lib.rs  repo.rs
core/credit/: Cargo.toml
core/credit/src/: error.rs  event.rs  for_subject.rs  lib.rs  publisher.rs
core/credit/tests/: chart_of_accounts_integration.rs  helpers.rs
core/custody/: Cargo.toml
core/custody/src/: config.rs  event.rs  lib.rs  primitives.rs  publisher.rs  webhook_notification_repo.rs
core/customer/: Cargo.toml
core/customer/src/: config.rs  entity.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs  repo.rs
core/deposit/: Cargo.toml
core/deposit/src/: chart_of_accounts_integration.rs  error.rs  event.rs  history.rs  lib.rs  primitives.rs  publisher.rs
core/deposit/tests/: chart_of_accounts_integration.rs  deposit.rs  withdraw.rs
core/document-storage/: Cargo.toml
core/document-storage/src/: entity.rs  lib.rs
core/money/: Cargo.toml
core/money/src/: lib.rs
core/public-id/: Cargo.toml
core/public-id/src/: entity.rs  error.rs  lib.rs  primitives.rs  repo.rs
core/report/: Cargo.toml
core/report/src/: config.rs  error.rs  event.rs  lib.rs  primitives.rs  publisher.rs
lana/admin-server/: Cargo.toml  libmacros.rlib
lana/admin-server/src/: custodian_webhooks.rs  lib.rs  primitives.rs
lana/app/: Cargo.toml
lana/app/migrations/: 20240517074612_core_setup.sql  20241201000000_customer_activity.sql  20250101000000_add_customer_last_activity.sql  20250711045557_create_core_customer_events_rollup.sql  20250711092443_create_core_deposit_account_events_rollup.sql  20250713102634_create_core_credit_facility_events_rollup.sql  20250713120802_create_core_disbursal_events_rollup.sql  20250717110127_create_core_withdrawal_events_rollup.sql  20250718075638_create_core_collateral_events_rollup.sql  20250721123244_create_core_deposit_events_rollup.sql  20250721123245_create_core_withdrawal_events_rollup.sql  20250723092743_create_core_deposit_events_rollup.sql  20250725112229_create_core_deposit_events_rollup.sql  20250727194845_create_core_user_events_rollup.sql  20250729184207_create_core_user_events_rollup.sql  20250729184209_create_core_permission_set_events_rollup.sql  20250729184210_create_core_approval_process_events_rollup.sql  20250729184212_create_core_policy_events_rollup.sql  20250729184215_create_core_deposit_events_rollup.sql  20250729184217_create_core_custodian_events_rollup.sql  20250729184227_create_core_liquidation_process_events_rollup.sql  20250729184228_create_core_document_events_rollup.sql  20250730073823_create_core_user_events_rollup.sql  20250730073824_create_core_role_events_rollup.sql  20250730073827_create_core_committee_events_rollup.sql  20250730073829_create_core_customer_events_rollup.sql  20250730073832_create_core_withdrawal_events_rollup.sql  20250730073834_create_core_collateral_events_rollup.sql  20250730073836_create_core_disbursal_events_rollup.sql  20250730073838_create_core_obligation_events_rollup.sql  20250730073839_create_core_payment_events_rollup.sql  20250730073840_create_core_payment_allocation_events_rollup.sql  20250730073842_create_core_chart_events_rollup.sql  20250730073845_create_core_manual_transaction_events_rollup.sql  20250730145334_create_core_deposit_events_rollup.sql  20250731041400_create_core_withdrawal_events_rollup.sql  20250803084130_create_core_payment_events_rollup.sql  20250804185633_create_core_customer_events_rollup.sql  20250805055629_create_core_obligation_installment_events_rollup.sql  20250805071003_create_core_obligation_events_rollup.sql  (+43 more)
lana/app/src/: lib.rs  primitives.rs
lana/app/tests/: authorization.rs  helpers.rs  user.rs
lana/cli/: Cargo.toml  build.rs
lana/cli/src/: build_info.rs  config.rs  lib.rs  main.rs
lana/contract-creation/: Cargo.toml
lana/contract-creation/src/: error.rs  job.rs  lib.rs  primitives.rs  templates.rs
lana/customer-activity/: Cargo.toml
lana/customer-activity/src/: config.rs  error.rs  job.rs  lib.rs  primitives.rs  repo.rs
lana/customer-server/: Cargo.toml
lana/customer-server/src/: lib.rs  primitives.rs
lana/customer-sync/: Cargo.toml
lana/customer-sync/src/: config.rs  error.rs  lib.rs
lana/dashboard/: Cargo.toml
lana/dashboard/src/: job.rs  lib.rs  primitives.rs
lana/deposit-sync/: Cargo.toml
lana/deposit-sync/src/: config.rs  error.rs  lib.rs
lana/entity-rollups/: Cargo.toml
lana/entity-rollups/schemas/: approval_process_event_schema.json  chart_event_schema.json  collateral_event_schema.json  committee_event_schema.json  credit_facility_event_schema.json  credit_facility_proposal_event_schema.json  custodian_event_schema.json  customer_event_schema.json  deposit_account_event_schema.json  deposit_event_schema.json  disbursal_event_schema.json  document_event_schema.json  interest_accrual_cycle_event_schema.json  liquidation_process_event_schema.json  manual_transaction_event_schema.json  obligation_event_schema.json  obligation_installment_event_schema.json  payment_event_schema.json  policy_event_schema.json  role_event_schema.json  terms_template_event_schema.json  user_event_schema.json  withdrawal_event_schema.json
lana/entity-rollups/src/: main.rs
lana/events/: Cargo.toml
lana/events/src/: lib.rs
lana/ids/: Cargo.toml
lana/ids/src/: lib.rs
lana/notification/: Cargo.toml
lana/rbac-types/: Cargo.toml
lana/sim-bootstrap/: Cargo.toml
lana/user-onboarding/: Cargo.toml
lib/airflow/: Cargo.toml
lib/authz/: Cargo.toml
lib/authz/src/: lib.rs  (+3 more)
(+1274 files in other folders)
