[package]
name = "core-accounting"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []
graphql = [ "dep:async-graphql" ]
json-schema = ["dep:schemars", "es-entity/json-schema", "cala-ledger/json-schema", "document-storage/json-schema"]

[dependencies]
audit = { workspace = true }
authz = { workspace = true }
core-money = { workspace = true }
document-storage = { workspace = true }
job = { workspace = true }
cloud-storage = { workspace = true }

cala-ledger = { workspace = true }
es-entity = { workspace = true, features = ["graphql"] }
sqlx = { workspace = true }

rust_decimal = { workspace = true }
base64 = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true, optional = true}
async-trait = { workspace = true }
schemars = { workspace = true, optional = true }

tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
authz = { workspace = true, features = ["test-dummy"] }
rand = { workspace = true }
rust_decimal_macros = { workspace = true }
