[package]
name = "core-credit"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []
graphql = [ "dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql" ]
json-schema = ["dep:schemars", "cala-ledger/json-schema", "es-entity/json-schema", "core-money/json-schema", "job/json-schema", "core-price/json-schema", "outbox/json-schema", "public-id/json-schema"]
sim-time = ["dep:sim-time", "es-entity/sim-time"]
mock-custodian = ["core-custody/mock-custodian"]

[dependencies]
core-money = { workspace = true }
core-price = { workspace = true }
core-customer = { workspace = true }
core-custody = { workspace = true }
governance = { workspace = true }
core-accounting = { workspace = true }

audit = { workspace = true }
authz = { workspace = true }
outbox = { workspace = true }
job = { workspace = true }
cloud-storage = { workspace = true }
public-id = { workspace = true }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-graphql = { workspace = true, optional = true }
sim-time = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
document-storage = { workspace = true }
authz = { workspace = true, features = ["test-dummy"] }
tokio = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
