[package]
name = "core-custody"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []
graphql = ["es-entity/graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema"]
mock-custodian = []

[dependencies]
audit = { workspace = true }
authz = { workspace = true }
outbox = { workspace = true }
bitgo = { workspace = true }
komainu = { workspace = true }
core-money = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
es-entity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = { workspace = true }
schemars = { workspace = true, optional = true }
uuid = { workspace = true }
http = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
