[package]
name = "core-customer"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["governance"]

[features]

default = ["governance"]
fail-on-warnings = []
graphql = ["es-entity/graphql", "governance?/graphql", "dep:async-graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "outbox/json-schema", "audit/json-schema"]
governance = ["dep:governance"]

[dependencies]

audit = { workspace = true }
authz = { workspace = true }
outbox = { workspace = true }
governance = { workspace = true, optional = true }
document-storage = { workspace = true }
public-id = { workspace = true }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
