[package]
name = "core-deposit"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []
graphql = ["dep:async-graphql", "cala-ledger/graphql"]
sim-time = ["dep:sim-time", "es-entity/sim-time"]
json-schema = ["dep:schemars", "es-entity/json-schema", "cala-ledger/json-schema", "job/json-schema", "core-money/json-schema", "outbox/json-schema", "public-id/json-schema"]

[dependencies]
core-money = { workspace = true }
governance = { workspace = true }
core-customer = { workspace = true }
core-accounting = { workspace = true }
public-id = { workspace = true }

audit = { workspace = true }
authz = { workspace = true }
outbox = { workspace = true }
job = { workspace = true }
cloud-storage = { workspace = true }

cala-ledger = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }

strum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-graphql = { workspace = true, optional = true }
sim-time = { workspace = true, optional = true }
base64 = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
authz = { workspace = true, features = ["test-dummy"] }
document-storage = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
rust_decimal_macros = { workspace = true }
rand = { workspace = true }
