[package]
name = "document-storage"
edition = "2024"
license = "FSL-1.1-ALv2"

[features]
fail-on-warnings = []
graphql = ["dep:async-graphql", "es-entity/graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "audit/json-schema"]

[dependencies]
audit = { workspace = true }
cloud-storage = { workspace = true }

es-entity = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true, optional = true }
async-graphql = { workspace = true, optional = true }
