[package]
name = "core-money"
version = "0.3.747-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
json-schema = ["schemars"]
graphql = ["async-graphql"]

[dependencies]

serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
