[package]
name = "core-money"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []
json-schema = ["schemars"]
graphql = ["async-graphql"]

[dependencies]

serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
async-graphql = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
