[package]
name = "core-report"
version = "0.3.728-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []
graphql = ["es-entity/graphql"]
json-schema = ["dep:schemars", "es-entity/json-schema", "outbox/json-schema", "audit/json-schema"]

[dependencies]
airflow = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
outbox = { workspace = true }
job = { workspace = true }
cloud-storage = { workspace = true }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true, optional = true }
