[package]
name = "admin-server"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []
mock-custodian = ["lana-app/mock-custodian"]
sumsub-testing = ["lana-app/sumsub-testing"]

[dependencies]
lana-app = { workspace = true }

audit = { workspace = true }
tracing-utils = { workspace = true, features = ["http"] }
jwks-utils = { workspace = true }

es-entity = { workspace = true, features = ["graphql"] }

uuid = { workspace = true }
base64 = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
