[package]
name = "lana-app"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["rust_decimal", "sim-time", "schemars"]

[features]
sim-time = [
  "dep:sim-time",
  "es-entity/sim-time",
  "core-credit/sim-time",
  "core-deposit/sim-time",
  "job/sim-time",
]

fail-on-warnings = []
mock-custodian = ["core-custody/mock-custodian", "core-credit/mock-custodian"]
sumsub-testing = ["core-applicant/sumsub-testing"]

[dependencies]
rbac-types = { path = "../rbac-types" }
lana-events = { path = "../events" }
lana-ids = { path = "../ids", features = ["graphql"] }
contract-creation = { path = "../contract-creation" }

dashboard = { path = "../dashboard" }
user-onboarding = { path = "../user-onboarding" }
customer-sync = { path = "../customer-sync" }
deposit-sync = { path = "../deposit-sync" }
notification = { path = "../notification" }

governance = { path = "../../core/governance", features = ["graphql"] }
core-money = { path = "../../core/money", features = ["graphql"] }
core-access = { path = "../../core/access", features = ["graphql"] }
core-applicant = { path = "../../core/applicant", features = ["graphql"] }
core-custody = { path = "../../core/custody", features = ["graphql"] }
core-credit = { path = "../../core/credit", features = ["graphql"] }
core-customer = { path = "../../core/customer", features = ["graphql"] }
core-price = { path = "../../core/price" }
core-deposit = { path = "../../core/deposit", features = ["graphql"] }
core-accounting = { path = "../../core/accounting", features = ["graphql"] }
core-report = { path = "../../core/report", features = ["graphql"] }
document-storage = { path = "../../core/document-storage", features = ["graphql"] }
public-id = { path = "../../core/public-id", features = ["graphql"] }
audit = { path = "../../lib/audit" }
job = { path = "../../lib/job" }
outbox = { path = "../../lib/outbox" }
authz = { path = "../../lib/authz" }
cloud-storage = { path = "../../lib/cloud-storage" }

cala-ledger = { workspace = true }
es-entity = { workspace = true, features = ["graphql"] }
sim-time = { workspace = true, optional = true }

anyhow = { workspace = true }
async-graphql = { workspace = true }

thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
