[package]
name = "lana-app"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["rust_decimal", "sim-time", "schemars"]

[features]
sim-time = [
  "dep:sim-time",
  "es-entity/sim-time",
  "core-credit/sim-time",
  "core-deposit/sim-time",
  "job/sim-time",
]

fail-on-warnings = []
mock-custodian = ["core-custody/mock-custodian", "core-credit/mock-custodian"]
sumsub-testing = ["core-applicant/sumsub-testing"]

[dependencies]
rbac-types = { workspace = true }
lana-events = { workspace = true }
lana-ids = { workspace = true, features = ["graphql"] }
contract-creation = { workspace = true }

dashboard = { workspace = true }
user-onboarding = { workspace = true }
customer-sync = { workspace = true }
deposit-sync = { workspace = true }
notification = { workspace = true }

governance = { workspace = true, features = ["graphql"] }
core-money = { workspace = true, features = ["graphql"] }
core-access = { workspace = true, features = ["graphql"] }
core-applicant = { workspace = true, features = ["graphql"] }
core-custody = { workspace = true, features = ["graphql"] }
core-credit = { workspace = true, features = ["graphql"] }
core-customer = { workspace = true, features = ["graphql"] }
core-price = { workspace = true }
core-deposit = { workspace = true, features = ["graphql"] }
core-accounting = { workspace = true, features = ["graphql"] }
core-report = { workspace = true, features = ["graphql"] }
document-storage = { workspace = true, features = ["graphql"] }
public-id = { workspace = true, features = ["graphql"] }
audit = { workspace = true }
job = { workspace = true }
outbox = { workspace = true }
authz = { workspace = true }
cloud-storage = { workspace = true }

cala-ledger = { workspace = true, features = ["graphql"] }
es-entity = { workspace = true, features = ["graphql"] }
sim-time = { workspace = true, optional = true }

anyhow = { workspace = true }
async-graphql = { workspace = true }

thiserror = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
