[package]
name = "lana-cli"
license = "FSL-1.1-ALv2"
edition = "2024"
build = "build.rs"

[features]
sim-time = [
  "dep:sim-time",
  "lana-app/sim-time"
]
sim-bootstrap = ["dep:sim-bootstrap"]
mock-custodian = ["admin-server/mock-custodian"]
sumsub-testing = ["lana-app/sumsub-testing", "admin-server/sumsub-testing"]

fail-on-warnings = []

[build-dependencies]
chrono = { workspace = true }

[dependencies]
lana-app = { workspace = true }
admin-server = { workspace = true }
customer-server = { workspace = true }

sim-bootstrap = { workspace = true, optional = true }

tracing-utils = { workspace = true, features = ["http"] }

sim-time = { workspace = true, optional = true }

anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
chacha20poly1305 = { workspace = true }
