[package]
name = "contract-creation"
version = "0.3.762-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["schemars"]

[features]
fail-on-warnings = []
json-schema = ["dep:schemars", "es-entity/json-schema", "audit/json-schema", "outbox/json-schema"]

[dependencies]
core-customer = { workspace = true }
core-applicant = { workspace = true }
document-storage = { workspace = true }
job = { workspace = true }
outbox = { workspace = true }
authz = { workspace = true }
audit = { workspace = true }
rendering = { workspace = true }

# External dependencies
es-entity = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }

schemars = { workspace = true, optional = true }
