[package]
name = "customer-server"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]
lana-app = { workspace = true }

tracing-utils = { workspace = true }
jwks-utils = { workspace = true }

es-entity = { workspace = true, features = ["graphql"] }

serde = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
