[package]
name = "customer-sync"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]

core-customer = { path = "../../core/customer" }
core-deposit = { path = "../../core/deposit" }
governance = { path = "../../core/governance" }
lana-events = { path = "../events" }
customer-activity = { path = "../customer-activity" }

outbox = { workspace = true }
job = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
es-entity = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
keycloak-client = { workspace = true }
chrono = { workspace = true }
