[package]
name = "deposit-sync"
version = "0.3.762-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]

core-deposit = { path = "../../core/deposit" }
core-money = { path = "../../core/money" }
governance = { path = "../../core/governance" }

sumsub = { path = "../../lib/sumsub" }
outbox = { path = "../../lib/outbox" }
job = { path = "../../lib/job" }
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }

lana-events = { path = "../events" }

tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true } 