[package]
name = "entity-rollups"

license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []
json-schema = [
  "core-access/json-schema",
  "governance/json-schema", 
  "core-custody/json-schema",
  "core-customer/json-schema",
  "document-storage/json-schema",
  "core-deposit/json-schema",
  "core-credit/json-schema",
  "core-accounting/json-schema"
]

[[bin]]
name = "entity-rollups"
path = "src/main.rs"

[dependencies]
core-access = { workspace = true }
governance = { workspace = true }
core-custody = { workspace = true }
core-customer = { workspace = true }
core-deposit = { workspace = true }
core-credit = { workspace = true }
core-accounting = { workspace = true }
document-storage = { workspace = true }

clap = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
colored = "3.0"
similar = { version = "2.6", features = ["inline"] }
handlebars = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.21.0"
