[package]
name = "lana-events"

license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]
governance = { workspace = true }
core-access = { workspace = true }
core-custody = { workspace = true }
core-customer = { workspace = true }
core-credit = { workspace = true }
core-deposit = { workspace = true }
core-report = { workspace = true }
outbox = { workspace = true }

serde = { workspace = true }
