[package]
name = "lana-ids"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["serde", "sqlx", "schemars"]

[features]

fail-on-warnings = []
json-schema = ["dep:schemars", "es-entity/json-schema", "cala-ledger/json-schema", "job/json-schema", "governance/json-schema"]
graphql = []

[dependencies]
governance = { workspace = true, features = ["graphql"] }

job = { workspace = true }

es-entity = { workspace = true, features = ["graphql"] }
cala-ledger = { workspace = true }

# Required by es_entity::entity_id macro
sqlx = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }
