[package]
name = "notification"

edition = "2024"

[features]

fail-on-warnings = []

[dependencies]
outbox = { workspace = true }
job = { workspace = true }
lana-events = { workspace = true }
core-access = { workspace = true }
core-credit = { workspace = true }
core-customer = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }
core-money = { workspace = true }
governance = { workspace = true }
core-custody = { workspace = true }

es-entity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
lettre = { workspace = true }
handlebars = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
