[package]
name = "rbac-types"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]
dashboard = { path = "../dashboard" }
contract-creation = { path = "../contract-creation" }

governance = { path = "../../core/governance" }
core-access = { path = "../../core/access" }
core-customer = { path = "../../core/customer" }
core-credit = { path = "../../core/credit" }
core-custody = { path = "../../core/custody" }
core-deposit = { path = "../../core/deposit" }
core-accounting = { path = "../../core/accounting" }
core-report = { path = "../../core/report" }
audit = { path = "../../lib/audit" }
authz = { path = "../../lib/authz" }

async-graphql = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
