[package]
name = "rbac-types"
version = "0.3.772-dev"
license = "FSL-1.1-ALv2"
edition = "2024"

[features]
fail-on-warnings = []

[dependencies]
dashboard = { workspace = true }
contract-creation = { workspace = true }

governance = { workspace = true }
core-access = { workspace = true }
core-customer = { workspace = true }
core-credit = { workspace = true }
core-custody = { workspace = true }
core-deposit = { workspace = true }
core-accounting = { workspace = true }
core-report = { workspace = true }
audit = { workspace = true }
authz = { workspace = true }

async-graphql = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
