[package]
name = "sim-bootstrap"

license = "FSL-1.1-ALv2"
edition = "2024"

[features]

fail-on-warnings = []

[dependencies]
lana-app = { workspace = true }
lana-events = { workspace = true }

sim-time = { workspace = true }
es-entity = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
